TP7-Types/tests/bad/t02.ml
(* Incohérence UNIT vs BOOL *)
print_newline false ;;
